--- a/GAN.ipynb
+++ b/GAN.ipynb
@@ -248,11 +248,11 @@
         "\n",
         "- Loss for dicriminator is given by:\n",
         "\\begin{equation}\n",
-        "min_{G}max_D V(D,G) = -0.5* \\mathbb{E}_{x \\sim f(x)}\\big[logD(x) + log(1-D(G(x)))\\big]\n",
+        "max_D V(D,G) = -0.5* \\mathbb{E}_{x \\sim f(x)}\\big[logD(x) + log(1-D(G(z)))\\big]\n",
         "\\end{equation}\n",
         "- Loss for generator is given by:\n",
         "\\begin{equation}\n",
-        "min_{G}max_D V(D,G) = -\\mathbb{E}_{x \\sim f(x)}\\big[logD(G(x))\\big]\n",
+        "max_G V(D,G) = -\\mathbb{E}_{x \\sim f(x)}\\big[logD(G(z))\\big]\n",
         "\\end{equation}\n",
         "where $D(x)$ and $G(x)$ are discriminator and generator networks respectively.\n"
       ]
